# python-todo-app

./: pyproject.toml
store/: inmemory_store.py  store.py  todo_item.py
tests/: test_inmemory_store.py
tests/store/: inmemory_store.py
