[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ross Burchnall <r-burchnall@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
